--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     </script>
     <script src="components/ecForm.js"></script>
     <script src="components/ecCayleyTable.js"></script>
+    <script src="components/ecTranslationTool.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -24,11 +25,14 @@
 
     <ec-ecform ></ec-ecform>
 
+    <ec-translator></ec-translator>
+
     <ec-cayleytable></ec-cayleytable>
 
     <script>
         const ecInput = document.querySelector('ec-ecform');
         const ecTable = document.querySelector('ec-cayleytable');
+        const ecTranslator = document.querySelector('ec-translator');
         document.addEventListener('create-new-curve', async e => {
             if(ecInput) {
                 try {
@@ -51,7 +55,53 @@
                     console.log(`Error: ${err}`);
                 }
             }
-        })
+        });
+
+        document.addEventListener('request-encrypt', async e => {
+            try {
+                const response = await fetch("/encrypt", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        a: ecInput.a,
+                        b: ecInput.b,
+                        mod: ecInput.mod,
+                        msg: e.detail.msg
+                    }),
+                    headers: { "Content-Type": "application/json" }
+                });
+                if(response.ok) {
+                    const res = await response.json();
+                    if(ecTranslator) {
+                        ecTranslator.setAttribute('output', res.encrypted_msg);
+                    }
+                }
+            } catch(err) {
+                console.log(`Error: ${err}`);
+            }
+        });
+
+         document.addEventListener('request-decrypt', async e => {
+            try {
+                const response = await fetch("/decrypt", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        a: ecInput.a,
+                        b: ecInput.b,
+                        mod: ecInput.mod,
+                        msg: e.detail.msg
+                    }),
+                    headers: { "Content-Type": "application/json" }
+                });
+                if(response.ok) {
+                    const res = await response.json();
+                    if(ecTranslator) {
+                        ecTranslator.setAttribute('output', res.plaintext_msg);
+                    }
+                }
+            } catch(err) {
+                console.log(`Error: ${err}`);
+            }
+        });
     </script>
 </body>
 </html>
